--- a/.github/workflows/build-push-ghcr.yml
+++ b/.github/workflows/build-push-ghcr.yml
@@ -42,7 +42,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             # set latest tag for default branch
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable={{is_default_branch}},priority=2000
             type=ref,event=branch
             type=sha
 
